feat: Autenticação com o firebase
Experimentos iniciais com a integração com o firebase. Os dados do usuário fornecidos durante o cadastro são inseridos no banco de dados com o seu userId.

--- a/corridasegura/pubspec.yaml
+++ b/corridasegura/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   email_validator: ^2.1.17
   image_picker: ^1.0.4
   permission_handler: ^10.4.3
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
