--- a/corridasegura/pubspec.yaml
+++ b/corridasegura/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   image_picker: ^1.0.4
   permission_handler: ^10.4.3
   cloud_firestore: ^4.9.1
+  google_maps_flutter: ^2.5.0
+  mask_text_input_formatter: ^2.5.0
+  geolocator: ^10.0.1
 
 dev_dependencies:
   flutter_test:
