--- a/corridasegura/android/app/src/main/AndroidManifest.xml
+++ b/corridasegura/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:label="corridasegura"
         android:name="${applicationName}"
@@ -32,5 +34,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <meta-data android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyBMXJ6ODdgsBwmfvBPPVzUVAaLzcvn9rvA"/>
     </application>
 </manifest>
