--- a/corridasegura/pubspec.yaml
+++ b/corridasegura/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   liquid_swipe: ^3.1.0
   flutter_native_splash: ^2.3.2
   get: ^4.6.5
-  smooth_page_indicator: ^1.1.0
   brasil_fields: ^1.14.0
   email_validator: ^2.1.17
   image_picker: ^1.0.4
@@ -27,7 +26,9 @@ dependencies:
   cloud_firestore: ^4.9.1
   google_maps_flutter: ^2.5.0
   mask_text_input_formatter: ^2.5.0
-  geolocator: ^10.0.1
+  flutter_polyline_points: ^2.0.0
+  flutter_svg: ^2.0.7
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,4 +46,5 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/images/
