--- a/corridasegura/pubspec.yaml
+++ b/corridasegura/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   flutter_svg: ^2.0.7
   geolocator: ^10.1.0
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
